[workspace]
members = ["contracts/sombrero"]

[profile.release]
codegen-units = 1
incremental = false
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
panic = 'abort'
overflow-checks = true      # Overflows should be errors.

[workspace.dependencies]
cosmwasm-schema         = { version = "1.1" }
cosmwasm-std            = { version = "1.1", features = ["ibc3"] }
cw-utils                = "1.0.0"
cw2                     = "1.0.0"
cw20                    = "1.0.0"
cw20-base               = "1.0.0"
cw721                   = "0.16.0"
cw721-metadata-onchain  = "0.15.0"
cw-storage-plus         = "1.0.1"
schemars                = "0.8.10"
serde                   = { version = "1.0.140", default-features = false, features = ["derive"] }
thiserror               = "1.0.37"
getrandom = { version = "0.2", features = ["js"] }
cw-multi-test           = "0.16.2"
