[package]
name          = "contract_1"
version = "0.0.0"
authors       = ["Nahem Seguias <nahemseguias@gmail.com>"]
description   = "Custom Boilerplate"
edition = "2021"
repository    = "https://github.com/nseguias/boilerplates"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true }
cw-utils        = { workspace = true }
cw2             = { workspace = true }
cw20            = { workspace = true }
cw721-base      = { workspace = true }
cw-storage-plus = { workspace = true }
schemars        = { workspace = true }
serde           = { workspace = true }
thiserror       = { workspace = true }
cw-multi-test   = { workspace = true }